loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:17: error: 'while' expected but '}' found.
	}
        ^